# PhotosToSocial

./: README.md  load.sh  main.py  pyproject.toml  requirements.txt  send.sh  update.sh
photos_to_bluesky/adaptors/social/: blue_sky.py  word_press.py
photos_to_bluesky/adaptors/storage/: json_file.py  json_storage.py
photos_to_bluesky/model/: config.py  image.py  photo.py  post.py
photos_to_bluesky/ports/: isocialmedia.py  istorage.py  storage.py
photos_to_bluesky/service/: image_loader.py  loader_service.py  photo_loader.py  post_builder.py  post_service.py  service.py
photos_to_social/adaptors/error_notifier/: email.py
photos_to_social/adaptors/social/: blue_sky.py  word_press.py
photos_to_social/adaptors/storage/: json_storage.py
photos_to_social/model/: config.py  photo.py  post.py
photos_to_social/ports/: error_notifier.py  isocialmedia.py  istorage.py  social_media.py  storage.py
photos_to_social/service/: loader_service.py  photo_loader.py  post_builder.py  post_service.py
test/photos_to_social/adaptors/social/: test_blue_sky.py  test_word_press.py
test/photos_to_social/service/: test_post_service.py
