[tool.poetry]
name = "photostobuffer"
version = "0.1.0"
description = ""
authors = ["Pere Jover <pere.jover@sennder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
piexif = "^1.1.3"
pyexiv2 = "^2.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
